--- a/css/list.css
+++ b/css/list.css
@@ -12,7 +12,7 @@
 .container .card-deck .card {
   padding: 1em;
   margin: 1em;
-  width: 14em;
+  width: 160px !important;
 }
 .container .card-deck .card .card-img-top {
   border-width: 1px;
@@ -20,4 +20,8 @@
 }
 .container .card-deck .card-body {
   text-align: center;
+}
+.container a {
+  color: black;
+  text-decoration: none;
 }
